# freeman_sentient

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  build_history.py  pyproject.toml  requirements.txt  run_all_tests.sh  run_integration_tests.sh  run_tests.sh
config/: __init__.py  agent_config.py  analytics_config.py  audit_config.yaml  community_config.yaml  content_config.yaml  ecosystem_config.yaml  freeman.yaml  hypothesis_config.yaml  intelligence_config.py  intelligence_config.yaml  memory_config.py  personas.yaml  platform_config.py
docs/: MULTI_PERSONA.md  PRD-sentient-chat.md  memory_system.md  sentient-proposal.md
examples/: memory_demo.py  mood_integration_example.py  multi_persona_demo.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
prompts/: content_creator_prompt.md
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  base_agent.py  content_creator.py  orchestrator.py  test_agent.py
src/analytics/: __init__.py  analytics_exporter.py  analytics_manager.py  metrics_tracker.py  models.py  sentiment_analyzer.py
src/audit/: __init__.py  improvement_engine.py  memory_patcher.py  models.py  output_reviewer.py  quality_tracker.py
src/collectors/: __init__.py  base.py  kickstarter_collector.py  telegram_collector.py  twitter_collector.py  youtube_collector.py
src/community/: __init__.py  audience_analyzer.py  models.py  pattern_analyzer.py  profile_intelligence.py  sentiment_aggregator.py
src/content/: __init__.py  deduplicator.py  generator.py  ideation.py  scheduler.py  storage.py  validator.py
src/core/: __init__.py  base_memory.py  config.py  mcp_tools.py  sentient_base.py
src/ecosystem/: __init__.py  graph.py  models.py  updater.py
src/hypothesis/: __init__.py  evidence_collector.py  models.py  reporter.py  tracker.py
src/intelligence/: __init__.py  briefing_assembler.py  models.py
src/memory/: README.md  __init__.py  action_memory.py  conversation_memory.py  emotional_memory.py  emotional_state.py  graphiti_adapter.py  isolation.py  memory_manager.py  mood.py  persona_memory.py  relationship_memory.py  temporal_people_graph.py  user_memory.py
src/persona/: __init__.py  config.py  manager.py  models.py
src/roma/: __init__.py  models.py  (+2 more)
tests/: __init__.py  test_analytics_exporter.py  test_analytics_integration.py  test_analytics_manager.py  test_e2e_analytics.py  test_e2e_content_pipeline.py  test_generator.py  test_ideation.py  test_integration.py  test_mcp_integration.py  test_metrics_tracker.py  test_persona_isolation.py  test_persona_manager.py  test_scheduler.py  test_sentient_integration.py  test_sentiment_analyzer.py  test_validator.py  verify_e2e.py
(+29 files in other folders)
